Aggiunta privacy e cookie policy

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -18,6 +18,8 @@
     color: var(--h1-color);
     font-weight: var(--fw-700);
     text-align: center;
+    animation: fadeInFromBottomBounce 1.5s ease-in-out forwards;
+    opacity: 0;
 }
 
 .hero-description {
@@ -25,10 +27,64 @@
     color: var(--body-text-color);
     font-weight: var(--fw-400);
     text-align: center;
+    animation: fadeInFromBottomBounce 1.5s ease-in-out forwards;
 }
 
 .hero-description span {
     color: var(--primary-color);
     font-weight: var(--fw-700);
     font-size: clamp(1.25rem, 1.157rem + 0.381vw, 1.5rem);
+}
+
+.hero-btn {
+    width: min(250px, 100%);
+    font-size: clamp(1.25rem, 1.157rem + 0.381vw, 1.5rem);
+    text-align: center;
+    background-color: var(--primary-color);
+    padding: 1rem 1rem;
+    border-radius: 10px;
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: var(--fw-700);
+    box-shadow: 0 10px 10px rgba(107, 192, 188, 0.5);
+    animation: fadeInFromBottomBounce 1.5s ease-in-out forwards;
+}
+
+/* SERVIZI */
+.services-home-section {
+    padding-block: 4.5rem;
+    box-shadow: 0 -40px 50px white;
+}
+
+.services-home-title {
+    font-size: clamp(2.5rem, 2.318rem + 0.762vw, 3rem);
+    color: var(--h2-color);
+    font-weight: var(--fw-700);
+    text-align: center;
+}
+
+@media (max-width: 768px) {
+    .hero-section {
+        min-height: 90vh;
+    }
+
+    .hero-description {
+        letter-spacing: -.5px;
+    }
+}
+
+@keyframes fadeInFromBottomBounce {
+    0% {
+        transform: translateY(100%);
+        opacity: 0;
+    }
+    50% {
+        transform: translateY(-10%);
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
