--- a/app/globals.css
+++ b/app/globals.css
@@ -30,11 +30,15 @@
   --fw-900: 900;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
 }
 
-body, p, a {
+body, p, a, li {
   font-family: var(--body-font);
   color: var(--body-text-color);
 }
