--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -5,6 +5,7 @@
     width: 100%;
     padding-block: 1rem;
     transition: all .3s;
+    z-index: 999;
 }
 
 .header-scrolled {
@@ -119,16 +120,6 @@
         transform: translateY(-0.6rem) rotate(-45deg);
     }
 
-    .overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 90vh;
-        background-color: rgba(107, 192, 188, 0.2);
-        transition: all .3s;
-    }
-
     .header-mobile-nav {
         position: absolute;
         top: 0;
@@ -142,6 +133,7 @@
         padding-block: 5rem;
         gap: 3rem;
         background-color: white;
+        z-index: 998;
     }
 
     .header-mobile-logo {
@@ -180,8 +172,8 @@
     }
 
     .header-mobile-social img {
-        width: 35px;
-        height: 35px;
+        width: 30px;
+        height: 30px;
     }
 }
 
