--- a/app/globals.css
+++ b/app/globals.css
@@ -38,9 +38,39 @@ h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
 }
 
+h1 {
+  font-size: clamp(3.75rem, 3.471rem + 1.143vw, 4.5rem);
+  color: var(--h1-color);
+  font-weight: var(--fw-700);
+}
+
+h2 {
+  font-size: clamp(2.5rem, 2.318rem + 0.762vw, 3rem);
+  color: var(--h2-color);
+  font-weight: var(--fw-600);
+}
+
+h3 {
+  font-size: clamp(1.5rem, 1.394rem + 0.381vw, 1.75rem);
+  color: var(--h3-color);
+  font-weight: var(--fw-600);
+}
+
 body, p, a, li {
   font-family: var(--body-font);
   color: var(--body-text-color);
+}
+
+.text-highlight {
+  font-size: clamp(1.25rem, 1.134rem + 0.476vw, 1.563rem);
+  color: var(--primary-color);
+  font-weight: var(--fw-500);
+  margin: 0;
+}
+
+.span-highlight {
+  color: var(--primary-color);
+  font-weight: var(--fw-600);
 }
 
 ::-webkit-scrollbar {
