--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,3 +1,31 @@
+/* GENERAL */
+.home-section-text {
+    font-size: clamp(1rem, 0.907rem + 0.381vw, 1.25rem);
+    margin: 0;
+}
+
+.section-link {
+    color: var(--primary-color);
+    font-weight: var(--fw-400);
+    text-decoration: none;
+    transition: all .3s;
+    font-size: clamp(1rem, 0.907rem + 0.381vw, 1.25rem);
+    width: fit-content;
+    border: 1px solid var(--primary-color);
+    padding: .5rem 1.5rem;
+    border-radius: 10px;
+}
+
+.section-link img {
+    width: 20px;
+    height: 20px;
+    margin-inline-start: .5rem;
+}
+
+.section-link:hover {
+    border-radius: 30px;
+}
+
 /* HERO SECTION */
 .hero-section {
     background-image: url("../assets/website-bg_4x.webp");
@@ -11,6 +39,20 @@
     min-height: 100vh;
     gap: 3rem;
     padding-inline: .75rem;
+    position: relative;
+}
+
+.light-bubble, .dark-bubble {
+    position: absolute;
+    z-index: 996;
+}
+
+.light-bubble.big {
+    width: clamp(18.75rem, 14.107rem + 19.048vw, 31.25rem);
+    height: clamp(18.75rem, 14.107rem + 19.048vw, 31.25rem);
+    bottom: -100px;
+    left: -100px;
+    animation: fadeInFromBottomBounce 1.5s ease-in-out forwards;
 }
 
 .hero-title {
@@ -49,19 +91,81 @@
     font-weight: var(--fw-700);
     box-shadow: 0 10px 10px rgba(107, 192, 188, 0.5);
     animation: fadeInFromBottomBounce 1.5s ease-in-out forwards;
+    z-index: 997;
+    transition: all .3s;
+}
+
+.hero-btn:hover {
+    background-color: var(--secondary-color);
 }
 
 /* SERVIZI */
 .services-home-section {
-    padding-block: 4.5rem;
+    padding-block: 6rem;
     box-shadow: 0 -40px 50px white;
+    transform: translate(0, 0);
 }
 
-.services-home-title {
-    font-size: clamp(2.5rem, 2.318rem + 0.762vw, 3rem);
+.services-header h2 {
+    font-size: clamp(2.25rem, 1.971rem + 1.143vw, 3rem);
     color: var(--h2-color);
     font-weight: var(--fw-700);
-    text-align: center;
+    margin: 0;
+}
+
+.services-columns .services-col:first-child {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.service-card-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.service-card-header h3 {
+    font-weight: var(--fw-700);
+    margin: 0;
+}
+
+.service-card-header img {
+    width: 40px;
+    height: 40px;
+}
+
+.services-home-description {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.services-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 2rem;
+}
+
+.service-card {
+    background-color: white;
+    padding: 1.5rem;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    transition: all .3s;
+}
+
+.service-card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 20px 20px rgba(107, 192, 188, 0.5);
+}
+
+.service-card p {
+    margin: 0;
 }
 
 @media (max-width: 768px) {
@@ -71,6 +175,10 @@
 
     .hero-description {
         letter-spacing: -.5px;
+    }
+
+    .light-bubble.big {
+        bottom: -40px;
     }
 }
 
