--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -125,12 +125,12 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 90vh;
+        height: 100vh;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        padding-block: 5rem;
+        padding: 5rem 0 11rem 0;
         gap: 3rem;
         background-color: white;
         z-index: 998;
