--- a/app/globals.css
+++ b/app/globals.css
@@ -56,7 +56,7 @@ h3 {
   font-weight: var(--fw-600);
 }
 
-body, p, a, li {
+body, p, a, li, label, input {
   font-family: var(--body-font);
   color: var(--body-text-color);
 }
@@ -71,6 +71,22 @@ body, p, a, li {
 .span-highlight {
   color: var(--primary-color);
   font-weight: var(--fw-600);
+}
+
+.error-message {
+  color: red;
+  text-align: center;
+  background-color: rgba(255, 0, 0, 0.1);
+  padding: .5rem;
+  border-radius: 5px;
+}
+
+.success-message {
+  color: green;
+  text-align: center;
+  background-color: rgba(0, 255, 0, 0.1);
+  padding: .5rem;
+  border-radius: 5px;
 }
 
 ::-webkit-scrollbar {
