--- a/components/form/form.module.css
+++ b/components/form/form.module.css
@@ -1,17 +1,17 @@
-.contacts-form {
+.contacts-form, .analysis-form {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     width: 100%;
 }
 
-.contacts-form label {
+.contacts-form label, .analysis-form label {
     display: block;
     margin-bottom: .5rem;
     text-transform: uppercase;
 }
 
-.contacts-form input, .contacts-form textarea {
+.contacts-form input, .contacts-form textarea, .analysis-form input {
     width: 100%;
     padding: .5rem;
     border: 1px solid rgb(179, 179, 179);
@@ -19,7 +19,7 @@
     transition: all .3s;
 }
 
-.contacts-form input:focus, .contacts-form textarea:focus {
+.contacts-form input:focus, .contacts-form textarea:focus, .analysis-form input:focus {
     border-color: var(--primary-color);
     outline: none;
 }
@@ -39,6 +39,26 @@
     box-shadow: 0 10px 10px rgba(107, 192, 188, 0.5);
 }
 
+.analysis-form button {
+    width: 250px;
+    margin: 0 auto;
+    padding: .5rem;
+    background-color: white;
+    border: 1px solid var(--primary-color);
+    color: var(--primary-color);
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-weight: var(--fw-500);
+    cursor: pointer;
+    transition: all .3s;
+    position: relative;
+    overflow: hidden;
+}
+
+.analysis-form button:hover::before {
+    transform: translate(-50%, -50%) scale(1);
+}
+
 .contacts-form button:hover {
     background-color: var(--secondary-color);
 }
@@ -52,38 +72,43 @@
     background-color: rgb(179, 179, 179);
 }
 
-.input-block-double {
+.input-block-double, .input-block-triple {
     display: flex;
     gap: 1rem;
     align-items: center;
 }
 
-.input-block-double .input-block {
+.input-block-double .input-block, .input-block-triple .input-block {
     width: 100%;
 }
 
-.contacts-form .privacy-input-block {
+.contacts-form .privacy-input-block, .analysis-form .privacy-input-block {
     display: flex;
     align-items: center;
 }
 
-.contacts-form .privacy-input-block input {
+.contacts-form .privacy-input-block input, .analysis-form .privacy-input-block input {
     margin-right: .5rem;
     width: 20px;
 }
 
-.contacts-form .privacy-input-block label {
+.contacts-form .privacy-input-block label, .analysis-form .privacy-input-block label {
     font-size: clamp(0.625rem, 0.579rem + 0.19vw, 0.75rem);
     margin: 0;
     color: var(--body-text-color);
 }
 
-.contacts-form label[for="privacy"] input {
-    margin-right: .5rem;
-    width: 20px;
-}
-
-.contacts-form a {
+.contacts-form a, .analysis-form a {
     color: var(--primary-color);
     text-decoration: none;
+}
+
+@media (max-width: 768px) {
+    .input-block-double, .input-block-triple {
+        flex-direction: column;
+    }
+
+    .input-block-double .input-block, .input-block-triple .input-block {
+        width: 100%;
+    }
 }
