--- a/components/form/form.module.css
+++ b/components/form/form.module.css
@@ -55,8 +55,9 @@
     overflow: hidden;
 }
 
-.analysis-form button:hover::before {
-    transform: translate(-50%, -50%) scale(1);
+.analysis-form button:hover {
+    background-color: var(--primary-color);
+    color: white;
 }
 
 .contacts-form button:hover {
