Modificata P&C Policy - Design 404

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -201,8 +201,41 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
+    gap: 5rem;
     height: 100vh;
+}
+
+.not-found-page h1 {
+    font-size: clamp(3.75rem, 3.471rem + 1.143vw, 4.5rem);
+    color: var(--primary-color);
+    font-weight: var(--fw-700);
+    margin: 0;
+    text-align: center;
+}
+
+.not-found-page p {
+    font-size: clamp(1.125rem, 1.079rem + 0.19vw, 1.25rem);
+    color: var(--body-text-color);
+    font-weight: var(--fw-400);
+    margin: 0;
+    text-align: center;
+}
+
+.not-found-page a {
+    font-size: clamp(1rem, 0.907rem + 0.381vw, 1.25rem);
+    text-align: center;
+    background-color: var(--primary-color);
+    padding: 1rem 2rem;
+    border-radius: 10px;
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: var(--fw-500);
+    transition: all .3s;
+}
+
+.not-found-page a:hover {
+    background-color: var(--secondary-color);
 }
 
 @media (max-width: 768px) {
