--- a/app/chi-siamo/about.module.css
+++ b/app/chi-siamo/about.module.css
@@ -1,7 +1,93 @@
-.maintenance-page {
+.about-us-page {
+    padding: 11rem 0 4.5rem 0;
+}
+
+.about-us-page section {
+    width: min(1000px, 100%);
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+    gap: 4.5rem;
+}
+
+.about-card-container {
+    display: flex;
+}
+
+.about-card-container div {
+    transition: all .3s;
+    width: 50%;
+    height: calc(100% - 2rem);
+
+}
+
+.card-text {
+    background: linear-gradient(45deg, #33899A, #6BC0BC);
+    padding: 1.5rem;
+    border-radius: 10px 0 0 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.card-text h2, .card-text p {
+    color: white;
+    margin: 0;
+}
+
+.card-text h2 {
+    font-size: clamp(1.5rem, 1.314rem + 0.762vw, 2rem);
+    text-transform: uppercase;
+    font-weight: var(--fw-700);
+}
+
+.card-image {
+    bottom: 0;
+    right: 0;
+}
+
+.card-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 0 10px 10px 10px
+}
+
+.about-card-container:nth-child(2) .card-text {
+    order: 1;
+}
+
+.about-card-container:nth-child(2) .card-image img {
+    border-radius: 10px 0 10px 10px;
+}
+
+.about-card-container:nth-child(2) .card-text {
+    border-radius: 0 10px 10px 0;
+}
+
+@media (max-width: 992px) {
+    .about-card-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .about-card-container div {
+        width: 100%;
+    }
+
+    .card-text {
+        border-radius: 10px 10px 0 0;
+    }
+
+    .card-image img {
+        border-radius: 0 0 10px 10px;
+    }
+
+    .about-card-container:nth-child(2) .card-text {
+        border-radius: 0 0 10px 10px;
+    }
+
+    .about-card-container:nth-child(2) .card-image img {
+        border-radius: 10px 10px 0 0;
+    }
 }
