--- a/app/portfolio/portfolio.module.css
+++ b/app/portfolio/portfolio.module.css
@@ -2,33 +2,6 @@
     padding: 11rem 0 5rem 0;
 }
 
-.image-container {
-    width: 100%;
-    height: 300px;
-    overflow: hidden;
-}
-
-.image-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 0.5rem 0.5rem 0 0;
-    transition: all .3s;
-}
-
-.image-container img:hover {
-    transform: scale(1.1);
-}
-
-.project {
-    width: 100%;
-    height: fit-content;
-    background-color: var(--white);
-    border-radius: 0.5rem;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-    overflow: hidden;
-}
-
 .portfolio-heading {
     color: var(--secondary-color);
     font-size: clamp(2rem, 1.629rem + 1.524vw, 3rem);
@@ -36,74 +9,42 @@
     text-transform: uppercase;
     font-weight: var(--fw-700);
     margin: 0;
+    animation: fadeInFromLeft 1s ease;
 }
 
 .portfolio-subheading {
     font-size: clamp(1rem, 0.907rem + 0.381vw, 1.25rem);
     margin-block: 2rem 4rem;
+    animation: fadeInFromRight 1s ease;
 }
 
-.project p, .project h2 {
-    margin: 0;
+.project-page {
+    height: 100dvh;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    justify-content: center;
+    align-items: center;
 }
 
-.project h2 {
-    font-weight: var(--fw-600);
-}
-
-.projects {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
-}
-
-.address p {
-    color: grey;
-}
-
-.service p {
-    color: var(--primary-color);
-    text-transform: uppercase;
-    font-weight: var(--fw-600);
-    font-size: 1.2rem;
-}
-
-.project-footer a {
-    display: block;
-    width: 100%;
-    padding: .75rem;
-    text-align: center;
-    border: 1px solid var(--primary-color);
-    text-decoration: none;
-    color: var(--primary-color);
-    border-radius: 10px;
-    transition: all .3s;
-}
-
-.project-footer a:hover {
-    box-shadow: 0 5px 5px rgba(107, 192, 188, 0.3);
-    transform: translateY(-5px);
-}
-
-.project-hero {
-    width: 100vw;
-    height: 50vh;
-}
-
-.project-hero img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-@media (max-width: 992px) {
-    .projects {
-        grid-template-columns: repeat(2, 1fr);
+@keyframes fadeInFromLeft {
+    from {
+        opacity: 0;
+        transform: translateX(-50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
     }
 }
 
-@media (max-width: 768px) {
-    .projects {
-        grid-template-columns: repeat(1, 1fr);
+@keyframes fadeInFromRight {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
     }
 }
