--- a/app/portfolio/portfolio.module.css
+++ b/app/portfolio/portfolio.module.css
@@ -14,17 +14,22 @@
 
 .portfolio-subheading {
     font-size: clamp(1rem, 0.907rem + 0.381vw, 1.25rem);
-    margin-block: 2rem 4rem;
+    margin-block: 0 4rem;
     animation: fadeInFromRight 1s ease;
 }
 
 .project-page {
     height: 100dvh;
+    width: 100vw;
+    display: flex;
+}
+
+.project-page div {
     display: flex;
     flex-direction: column;
-    gap: 3rem;
     justify-content: center;
     align-items: center;
+    gap: 3rem;
 }
 
 @keyframes fadeInFromLeft {
